--- a/package.json
+++ b/package.json
@@ -2,26 +2,35 @@
   "name": "@yeldirium/ts-npm-package-template",
   "version": "0.0.1",
   "description": "A template for npm packages written in TypeScript.",
-  "author": {
-    "name": "Hannes Leutloff",
-    "email": "hannes.leutloff@yeldirium.de",
-    "url": "https://yeldirium.de/"
+  "contributors": [
+    {
+      "name": "Hannes Leutloff",
+      "email": "hannes.leutloff@yeldirium.de",
+      "url": "https://yeldirium.de/"
+    }
+  ],
+  "private": false,
+  "main": "build/lib/index.js",
+  "types": "build/lib/index.d.ts",
+  "dependencies": {
   },
-  "license": "MIT",
+  "devDependencies": {
+    "@semantic-release/changelog": "6.0.0",
+    "@semantic-release/git": "10.0.0",
+    "assertthat": "6.3.13",
+    "roboter": "12.3.0",
+    "semantic-release": "18.0.0"
+  },
+  "scripts": {
+  },
   "repository": {
     "type": "git",
     "url": "git://github.com/yeldirium/ts-npm-package-template.git"
   },
-  "main": "build/lib/index.js",
-  "types": "build/lib/index.d.ts",
   "publishConfig": {
     "access": "public"
   },
-  "devDependencies": {
-    "@semantic-release/changelog": "5.0.1",
-    "@semantic-release/git": "9.0.0",
-    "assertthat": "5.2.5",
-    "roboter": "11.6.27",
-    "semantic-release": "17.4.2"
-  }
+  "keywords": [
+  ],
+  "license": "MIT"
 }
